dhall/tests/type-errors/unit/VariableFree.txt
Type error: Unhandled error: error: unbound variable `x`
 --> <current file>:1:0
  |
1 | x
  | ^ not found in this scope
  |
